static/styles/zulip.css
/* ... */
@keyframes pulse {
    0% {
        box-shadow: 0 0 30px hsla(0, 0%, 0%, 0.35);
    }

    50% {
        box-shadow: 0 0 30px hsla(0, 0%, 0%, 0.15);
    }

    100% {
        box-shadow: 0 0 30px hsla(0, 0%, 0%, 0.35);
    }
}

.fade-in-message {
    animation-name: fadeInMessage;
    animation-duration: 1s;
    animation-iteration-count: 1;

    .message_edit_notice {
        animation-name: fadeInEditNotice;
        animation-duration: 1s;
        animation-iteration-count: 1;
    }
}

.message_edit_notice_hover:hover {
    opacity: 1;
}

.header {
    position: fixed;
    z-index: 102; /* Needs to be higher than .alert-bar-container */
    width: 100%;
    height: $header_height;
    padding-bottom: $header_padding_bottom;
    background-color: inherit;
}

#top_navbar {
    border-bottom: 1px solid hsla(0, 0%, 0%, 0.2);
}

#panels {
    font-size: 1rem;
    position: relative;

    .alert {
        margin: 0;
        padding-top: 12px;
        padding-bottom: 12px;

        border: none;
        border-radius: 0;

        text-align: center;
        text-shadow: none;
        color: hsl(0, 0%, 100%);

        &.alert-info {
            background-color: hsl(170, 46%, 54%);

            &.red {
                background-color: hsl(0, 46%, 54%);
            }
        }

        .close {
            line-height: 24px;
            position: absolute;
            right: 18px;
            top: 50%;
            transform: translateY(-50%);
        }

        .alert-link {
            color: hsl(169, 100%, 88%);
            font-weight: 600;
        }

        &.red .alert-link {
            color: hsl(0, 100%, 88%);
        }

        .buttons .alert-link {
            margin: 0 5px;
        }
    }
}

.app {
    width: 100%;
    height: 100%;
    overflow-y: scroll;
    z-index: 99;
    -webkit-overflow-scrolling: touch;
}

.app-main,
.header-main {
    width: 100%;
    /* TODO: This 1400px is wrong, but it's hard to do better.  On
       browsers with a nonzero default scrollbar width (i.e. not
       macOS), we actually want a max-width of 1400px+the width of the
       scrollbar, which is done as an override in
       static/js/scroll_bar.js.

       And with the fluid_layout_width setting, we don't want a
       max-width at all.  The consequence is that if you reload a
       Zulip window, there's a brief flash where the content is
       misplaced before the JS code can fix it. */
    max-width: 1400px;
    min-width: 950px;
    margin: 0 auto;
    padding: 0;
    position: relative;
    background-color: hsl(0, 0%, 100%);
}

.fixed-app {
    width: 100%;
    position: fixed;
    z-index: 98;
    left: 0;
}

.column-left,
.column-right {
    width: 250px;
    max-width: 250px;
}

.column-left {
    position: absolute;
    left: 0;
    top: 0;
}

.column-right {
    position: absolute;
    right: 0;
    top: 0;
}

.app-main {
    height: 100%;
    min-height: 100%;

    .column-left .left-sidebar,
    .column-right .right-sidebar {
        position: fixed;
        margin-top: $sidebar_top;
        z-index: 100;
    }

    .column-left .left-sidebar {
        width: 242px;
        padding-left: 0;
    }

    .column-right .right-sidebar {
        padding-left: 10px;
        width: 240px;
    }

    .column-middle {
        min-height: 100%;
    }
}

.column-middle {
    margin-right: 250px;
    margin-left: 250px;
    position: relative;
}

textarea,
input {
    font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
}

/* Override Bootstrap's fixed sizes for various elements */
textarea,
label {
    font-size: inherit;
    line-height: inherit;
}

/* Bootstrap's focus outline uses -webkit-focus-ring-color which doesn't exist in Firefox */
a:not(:active):focus {
    outline: 2px solid hsl(215, 47%, 50%);
    /* TODO: change solid to auto once the Chromium bug #1105822 is fixed */
}

/* List of text-like input types taken from Bootstrap */
input {
    &[type="text"],
    &[type="password"],
    &[type="datetime"],
    &[type="datetime-local"],
    &[type="date"],
    &[type="month"],
    &[type="time"],
    &[type="week"],
    &[type="number"],
    &[type="email"],
    &[type="url"],
    &[type="search"],
    &[type="tel"],
    &[type="color"] {
        font-size: inherit;
        height: 1.4em;
    }
}

li,
.table th,
.table td {
    line-height: inherit;
}

.btn {
    font-size: inherit;
    height: auto;
    line-height: 100%;
}

/* Classes which style copy buttons */
.copy_button_base {
    outline-color: hsl(0, 0%, 73%);
    height: 18px;
    width: 10px;
    padding: 6px 6px;
    display: block;
    /* The below two avoids the padded element from displaying
    it's own border and background color */
    border: none;
    background-clip: content-box;
    /* The z-index here ensures that the copy-message
    icon is clickable and is needed because of reduced
    opacity of readonly textarea */
    z-index: 2;

    &:hover svg path {
        fill: hsl(200, 100%, 40%);
    }
}

.copy_message {
    position: relative;
    top: 27px;
    left: -10px;
    margin-top: -24px;
}

#copy_generated_invite_link {
    position: relative;
    margin-right: -32px;
    margin-top: -1px;
}

#clipboard_image {
    margin-top: -5px;
    margin-left: -8px;
}

.btn-large {
    font-size: 115%;
}

/* Classes for hiding and showing controls */

.notdisplayed {
    display: none !important;
}

.notvisible {
    visibility: hidden !important;
    width: 0 !important;
    min-width: 0 !important;
    min-height: 0 !important;
    height: 0 !important;
    overflow: hidden !important;
    position: absolute !important;
}

/* Lighter strong */

strong {
    font-weight: 600;
}

.preserve_spaces {
    white-space: pre-wrap;
}

.sp-input {
    width: calc(100% - 14px);
    box-sizing: initial !important;
}

.logout {
    white-space: nowrap;
}

.sidebar-title {
    font-size: 14px;
    color: hsl(0, 0%, 43%);
    font-weight: normal;
    display: inline;
}
/* ... */

